make up openapi spec
